# arxivable

./: .gitignore  README.md  pyproject.toml
src/arxivable/: __init__.py  cli.py  pipeline.py  utils.py
src/arxivable/steps/: arxiv_compat.py  claude_check.py  clone.py  comments.py  compile.py  package.py  pdf_diff.py  todos.py  unused_files.py
